# home-statd

./: devenv.nix  flake.nix  pyproject.toml
