[tool.poetry]
name = "home-statd"
version = "0.1.0"
description = "A tool to backup/restore permissions on UNIX."
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.scripts]
cli = "home_statd.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
